// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should mark the input as invalid 1`] = `
<div>
  <EuiTitle
    size="s"
  >
    <h2>
      <MemoizedFormattedMessage
        defaultMessage="Step {currentStepNumber} of {totalStepNumber}: Define an index pattern"
        id="indexPatternManagement.createIndexPattern.stepHeader"
        values={
          Object {
            "currentStepNumber": 0,
            "totalStepNumber": 0,
          }
        }
      />
    </h2>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup>
    <EuiFlexItem>
      <EuiForm
        isInvalid={true}
      >
        <EuiCompressedFormRow
          describedByIds={Array []}
          display="rowCompressed"
          error={
            Array [
              "Input is invalid",
            ]
          }
          fullWidth={true}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText={
            <React.Fragment>
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Use an asterisk ({asterisk}) to match multiple indices."
                id="indexPatternManagement.createIndexPattern.step.indexPattern.allowLabel"
                values={
                  Object {
                    "asterisk": <strong>
                      *
                    </strong>,
                  }
                }
              />
               
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Spaces and the characters {characterList} are not allowed."
                id="indexPatternManagement.createIndexPattern.step.indexPattern.disallowLabel"
                values={
                  Object {
                    "characterList": <strong>
                      %
                    </strong>,
                  }
                }
              />
            </React.Fragment>
          }
          isInvalid={true}
          label={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Index pattern name"
              id="indexPatternManagement.createIndexPattern.step.indexPatternLabel"
            />
          }
          labelType="label"
        >
          <EuiCompressedFieldText
            data-test-subj="createIndexPatternNameInput"
            fullWidth={true}
            isInvalid={true}
            name="indexPattern"
            onChange={[Function]}
            placeholder="index-name-*"
            value="%"
          />
        </EuiCompressedFormRow>
        <EuiCompressedFormRow
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={true}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="A friendly name to show in the UI instead of the index pattern. Leave empty to use the pattern as the display name."
              id="indexPatternManagement.createIndexPattern.step.displayNameHelpText"
            />
          }
          label={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Display name"
              id="indexPatternManagement.createIndexPattern.step.displayNameLabel"
            />
          }
          labelType="label"
        >
          <EuiCompressedFieldText
            data-test-subj="createIndexPatternDisplayNameInput"
            fullWidth={true}
            name="displayName"
            onChange={[Function]}
            placeholder="e.g., Production Logs"
            value=""
          />
        </EuiCompressedFormRow>
      </EuiForm>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCompressedFormRow
        describedByIds={Array []}
        display="rowCompressed"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={true}
        labelType="label"
      >
        <EuiSmallButton
          data-test-subj="createIndexPatternGoToStep2Button"
          fill={true}
          iconSide="right"
          iconType="arrowRight"
          isDisabled={true}
          onClick={[Function]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Next step"
            id="indexPatternManagement.createIndexPattern.step.nextStepButton"
          />
        </EuiSmallButton>
      </EuiCompressedFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`Header should render normally 1`] = `
<div>
  <EuiTitle
    size="s"
  >
    <h2>
      <MemoizedFormattedMessage
        defaultMessage="Step {currentStepNumber} of {totalStepNumber}: Define an index pattern"
        id="indexPatternManagement.createIndexPattern.stepHeader"
        values={
          Object {
            "currentStepNumber": 0,
            "totalStepNumber": 0,
          }
        }
      />
    </h2>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup>
    <EuiFlexItem>
      <EuiForm
        isInvalid={false}
      >
        <EuiCompressedFormRow
          describedByIds={Array []}
          display="rowCompressed"
          error={Array []}
          fullWidth={true}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText={
            <React.Fragment>
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Use an asterisk ({asterisk}) to match multiple indices."
                id="indexPatternManagement.createIndexPattern.step.indexPattern.allowLabel"
                values={
                  Object {
                    "asterisk": <strong>
                      *
                    </strong>,
                  }
                }
              />
               
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Spaces and the characters {characterList} are not allowed."
                id="indexPatternManagement.createIndexPattern.step.indexPattern.disallowLabel"
                values={
                  Object {
                    "characterList": <strong>
                      %
                    </strong>,
                  }
                }
              />
            </React.Fragment>
          }
          isInvalid={false}
          label={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Index pattern name"
              id="indexPatternManagement.createIndexPattern.step.indexPatternLabel"
            />
          }
          labelType="label"
        >
          <EuiCompressedFieldText
            data-test-subj="createIndexPatternNameInput"
            fullWidth={true}
            isInvalid={false}
            name="indexPattern"
            onChange={[Function]}
            placeholder="index-name-*"
            value="k"
          />
        </EuiCompressedFormRow>
        <EuiCompressedFormRow
          describedByIds={Array []}
          display="rowCompressed"
          fullWidth={true}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="A friendly name to show in the UI instead of the index pattern. Leave empty to use the pattern as the display name."
              id="indexPatternManagement.createIndexPattern.step.displayNameHelpText"
            />
          }
          label={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Display name"
              id="indexPatternManagement.createIndexPattern.step.displayNameLabel"
            />
          }
          labelType="label"
        >
          <EuiCompressedFieldText
            data-test-subj="createIndexPatternDisplayNameInput"
            fullWidth={true}
            name="displayName"
            onChange={[Function]}
            placeholder="e.g., Production Logs"
            value=""
          />
        </EuiCompressedFormRow>
      </EuiForm>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCompressedFormRow
        describedByIds={Array []}
        display="rowCompressed"
        fullWidth={false}
        hasChildLabel={true}
        hasEmptyLabelSpace={true}
        labelType="label"
      >
        <EuiSmallButton
          data-test-subj="createIndexPatternGoToStep2Button"
          fill={true}
          iconSide="right"
          iconType="arrowRight"
          isDisabled={false}
          onClick={[Function]}
        >
          <MemoizedFormattedMessage
            defaultMessage="Next step"
            id="indexPatternManagement.createIndexPattern.step.nextStepButton"
          />
        </EuiSmallButton>
      </EuiCompressedFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
